--- a/InSAR4SM_ERA5-Land_comparison.ipynb
+++ b/InSAR4SM_ERA5-Land_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "[67 rows x 1 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "[67 rows x 2 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -623,10 +623,11 @@
     "                    y='InSAR4SM',\n",
     "                    hue='orbit',\n",
     "                    data=InSAR4SM_df_cell_mean,\n",
+    "                    size=2,\n",
     "                    alpha=0.7)\n",
     "    \n",
     "    ax.get_legend().remove()\n",
-    "    ax.annotate(\" RMSE:{0:.2f} R:{1:.2f} \".format(rmse, corr)+\"$m^{3}/$\"+\"$m^{3}$\", xy=(0.,0.7), xycoords='axes fraction',fontsize=9)\n",
+    "    ax.annotate(\" RMSE:{0:.1f} $m^3/m^3$ \\n R:{1:.2f} \".format(rmse, corr), xy=(0.,0.7), xycoords='axes fraction',fontsize=9)\n",
     "\n",
     "    ax.yaxis.label.set_visible(False)\n",
     "    \n",
@@ -635,6 +636,13 @@
     "    plt.savefig('/RSL02/SM_NA/Plotting/r1_{}'.format(export_name))\n",
     "    plt.close()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
