--- a/FordDryLake_InSAR4SM_results.ipynb
+++ b/FordDryLake_InSAR4SM_results.ipynb
@@ -59,10 +59,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_INSAR4SM(orbit_num, orbit_time_UTC, grid_size, opt_method, ph_closure_dist, sm_dry_state, ISMN_station):\n",
+    "def run_INSAR4SM(orbit_num, orbit_time_UTC, grid_size, ISMN_station):\n",
     "    ###############################################################################\n",
     "    # the name of your experiment\n",
-    "    projectname = 'INSAR4SM_r1_orb{}_{}m_{}_dist{}_dry{}_{}'.format(orbit_num, grid_size, opt_method, ph_closure_dist, sm_dry_state, ISMN_station)\n",
+    "    projectname = 'INSAR4SM_r1_orb{}_{}m_{}'.format(orbit_num, grid_size, ISMN_station)\n",
     "\n",
     "    # the directory of the topstack processing\n",
     "    topstackDir = '/RSL02/SM_NA/Topstack_processing_orbit_{}'.format(orbit_num)\n",
@@ -120,11 +120,6 @@
     "    stack.n_sm_points = len(stack.sm_points)\n",
     "\n",
     "    sm_point_ts = SM_point(stack, sm_ind=0)\n",
-    "    \n",
-    "    sm_point_ts.opt_method = opt_method\n",
-    "    sm_point_ts.ph_closure_dist = ph_closure_dist\n",
-    "    sm_point_ts.sm_dry_state = sm_dry_state\n",
-    "\n",
     "    sm_point_ts.get_DS_info(stack)\n",
     "    sm_point_ts.calc_covar_matrix()\n",
     "    sm_point_ts.get_DS_geometry(stack)\n",
@@ -185,49 +180,40 @@
      "output_type": "stream",
      "text": [
       "number of SLCs discovered:  23\n",
-      "creating directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_r1_orb173_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_datasets/slcs\n",
+      "creating directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/slcs\n",
       "write vrt file for each SLC ...\n",
-      "creating stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_r1_orb173_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_datasets/coreg_stack\n",
+      "creating stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/coreg_stack\n",
       "write vrt file for stack directory\n",
-      "creating geometry directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_r1_orb173_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_datasets/geometry\n",
+      "creating geometry directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/geometry\n",
       "write vrt file for geometry dataset\n",
       "number of SLCs discovered:  22\n",
-      "creating directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_r1_orb100_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_datasets/slcs\n",
+      "creating directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/slcs\n",
       "write vrt file for each SLC ...\n",
-      "creating stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_r1_orb100_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_datasets/coreg_stack\n",
+      "creating stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/coreg_stack\n",
       "write vrt file for stack directory\n",
-      "creating geometry directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_r1_orb100_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_datasets/geometry\n",
+      "creating geometry directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/geometry\n",
       "write vrt file for geometry dataset\n",
       "number of SLCs discovered:  22\n",
-      "creating directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_r1_orb166_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_datasets/slcs\n",
+      "creating directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/slcs\n",
       "write vrt file for each SLC ...\n",
-      "creating stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_r1_orb166_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_datasets/coreg_stack\n",
+      "creating stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/coreg_stack\n",
       "write vrt file for stack directory\n",
-      "creating geometry directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_r1_orb166_100m_SLSQP_dist6_dry2.8_FordDryLake/INSAR4SM_datasets/geometry\n",
+      "creating geometry directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/geometry\n",
       "write vrt file for geometry dataset\n"
      ]
     }
    ],
    "source": [
     "ISMN_station = 'FordDryLake'\n",
-    "grid_size = 100\n",
+    "grid_size = 125 # radius \n",
     "\n",
     "orbit_combs = [['173','14:00:00'],\n",
     "               ['100','14:00:00'],\n",
     "               ['166','02:00:00']]\n",
     "\n",
-    "opt_methods = ['SLSQP']\n",
-    "\n",
-    "ph_closure_dists = [6]\n",
-    "\n",
-    "sm_dry_states = [2.8]\n",
-    "\n",
     "for orbit_comb in orbit_combs:\n",
     "    orbit_num,  orbit_time_UTC =  orbit_comb\n",
-    "    for opt_method in opt_methods:\n",
-    "        for ph_closure_dist in ph_closure_dists:\n",
-    "            for sm_dry_state in sm_dry_states:\n",
-    "                run_INSAR4SM(orbit_num, orbit_time_UTC, grid_size, opt_method, ph_closure_dist, sm_dry_state, ISMN_station)\n"
+    "    run_INSAR4SM(orbit_num, orbit_time_UTC, grid_size, ISMN_station)\n"
    ]
   },
   {
