demonstration for revisions round 1

--- a/FordDryLake_InSAR4SM_coh_index_results.ipynb
+++ b/FordDryLake_InSAR4SM_coh_index_results.ipynb
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_INSAR4SM(orbit_num, orbit_time_UTC, grid_size, ISMN_station):\n",
     "    ###############################################################################\n",
     "    # the name of your experiment\n",
-    "    projectname = 'INSAR4SM_r1_orb{}_{}m_{}'.format(orbit_num, grid_size, ISMN_station)\n",
+    "    projectname = 'INSAR4SM_r1_orb{}_{}m_{}_coh_index'.format(orbit_num, grid_size, ISMN_station)\n",
     "\n",
     "    # the directory of the topstack processing\n",
     "    topstackDir = '/RSL02/SM_NA/Topstack_processing_orbit_{}'.format(orbit_num)\n",
@@ -120,6 +120,8 @@
     "    stack.n_sm_points = len(stack.sm_points)\n",
     "\n",
     "    sm_point_ts = SM_point(stack, sm_ind=0)\n",
+    "    sm_point_ts = SM_point(stack, sm_ind=0)\n",
+    "    sm_point_ts.amp_sel = False\n",
     "    sm_point_ts.get_DS_info(stack)\n",
     "    sm_point_ts.calc_covar_matrix()\n",
     "    sm_point_ts.get_DS_geometry(stack)\n",
@@ -157,7 +159,7 @@
     "    comparison_df['Datetime'] = comparison_df.index\n",
     "    comparison_df.to_csv('{}/comparison_{}.csv'.format(stack.export_dir,ISMN_station), index=False)\n",
     "\n",
-    "    predictions = comparison_df['insar4sm'].values\n",
+    "    predictions = comparison_df['SM_index'].values\n",
     "    targets = comparison_df['sm_plot'].values\n",
     "    n = predictions.shape[0]\n",
     "    rmse = np.linalg.norm(predictions - targets) / np.sqrt(n)\n",
@@ -167,14 +169,13 @@
     "    #comparison_df[['sm_plot', 'SM0', 'SM_index', 'insar4sm']].plot(figsize=(13,18), style='.-')\n",
     "    comparison_df[['sm_plot', 'SM_index']].plot(figsize=(10,8), style='.-')\n",
     "    plt.title('RMSE: {} m3/m3 \\n R : {} \\n bias : {}'.format(round(rmse,2), round(r,2), round(bias,2)))\n",
-    "\n",
     "    plt.savefig('/RSL02/SM_NA/revisions_r1_figures/{}.svg'.format(projectname))\n",
     "    plt.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,25 +183,25 @@
      "output_type": "stream",
      "text": [
       "number of SLCs discovered:  23\n",
-      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/slcs\" already exists.\n",
+      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake_coh_index/INSAR4SM_r1_orb173_125m_FordDryLake_coh_index/INSAR4SM_datasets/slcs\" already exists.\n",
       "write vrt file for each SLC ...\n",
-      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/coreg_stack already exists\n",
+      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake_coh_index/INSAR4SM_r1_orb173_125m_FordDryLake_coh_index/INSAR4SM_datasets/coreg_stack already exists\n",
       "write vrt file for stack directory\n",
-      "directory /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/geometry already exists.\n",
+      "directory /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake_coh_index/INSAR4SM_r1_orb173_125m_FordDryLake_coh_index/INSAR4SM_datasets/geometry already exists.\n",
       "write vrt file for geometry dataset\n",
       "number of SLCs discovered:  22\n",
-      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/slcs\" already exists.\n",
+      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake_coh_index/INSAR4SM_r1_orb100_125m_FordDryLake_coh_index/INSAR4SM_datasets/slcs\" already exists.\n",
       "write vrt file for each SLC ...\n",
-      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/coreg_stack already exists\n",
+      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake_coh_index/INSAR4SM_r1_orb100_125m_FordDryLake_coh_index/INSAR4SM_datasets/coreg_stack already exists\n",
       "write vrt file for stack directory\n",
-      "directory /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/geometry already exists.\n",
+      "directory /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake_coh_index/INSAR4SM_r1_orb100_125m_FordDryLake_coh_index/INSAR4SM_datasets/geometry already exists.\n",
       "write vrt file for geometry dataset\n",
       "number of SLCs discovered:  22\n",
-      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/slcs\" already exists.\n",
+      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake_coh_index/INSAR4SM_r1_orb166_125m_FordDryLake_coh_index/INSAR4SM_datasets/slcs\" already exists.\n",
       "write vrt file for each SLC ...\n",
-      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/coreg_stack already exists\n",
+      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake_coh_index/INSAR4SM_r1_orb166_125m_FordDryLake_coh_index/INSAR4SM_datasets/coreg_stack already exists\n",
       "write vrt file for stack directory\n",
-      "directory /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/geometry already exists.\n",
+      "directory /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake_coh_index/INSAR4SM_r1_orb166_125m_FordDryLake_coh_index/INSAR4SM_datasets/geometry already exists.\n",
       "write vrt file for geometry dataset\n"
      ]
     }
