--- a/FordDryLake_InSAR4SM_noDS_results.ipynb
+++ b/FordDryLake_InSAR4SM_noDS_results.ipynb
@@ -62,7 +62,7 @@
     "def run_INSAR4SM(orbit_num, orbit_time_UTC, grid_size, ISMN_station):\n",
     "    ###############################################################################\n",
     "    # the name of your experiment\n",
-    "    projectname = 'INSAR4SM_r1_orb{}_{}m_{}'.format(orbit_num, grid_size, ISMN_station)\n",
+    "    projectname = 'INSAR4SM_r1_orb{}_{}m_{}_noDS'.format(orbit_num, grid_size, ISMN_station)\n",
     "\n",
     "    # the directory of the topstack processing\n",
     "    topstackDir = '/RSL02/SM_NA/Topstack_processing_orbit_{}'.format(orbit_num)\n",
@@ -120,6 +120,8 @@
     "    stack.n_sm_points = len(stack.sm_points)\n",
     "\n",
     "    sm_point_ts = SM_point(stack, sm_ind=0)\n",
+    "    sm_point_ts = SM_point(stack, sm_ind=0)\n",
+    "    sm_point_ts.amp_sel = False\n",
     "    sm_point_ts.get_DS_info(stack)\n",
     "    sm_point_ts.calc_covar_matrix()\n",
     "    sm_point_ts.get_DS_geometry(stack)\n",
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -182,25 +184,25 @@
      "output_type": "stream",
      "text": [
       "number of SLCs discovered:  23\n",
-      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/slcs\" already exists.\n",
+      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_datasets/slcs\" already exists.\n",
       "write vrt file for each SLC ...\n",
-      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/coreg_stack already exists\n",
+      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_datasets/coreg_stack already exists\n",
       "write vrt file for stack directory\n",
-      "directory /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/geometry already exists.\n",
+      "directory /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_datasets/geometry already exists.\n",
       "write vrt file for geometry dataset\n",
       "number of SLCs discovered:  22\n",
-      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/slcs\" already exists.\n",
+      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_datasets/slcs\" already exists.\n",
       "write vrt file for each SLC ...\n",
-      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/coreg_stack already exists\n",
+      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_datasets/coreg_stack already exists\n",
       "write vrt file for stack directory\n",
-      "directory /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/geometry already exists.\n",
+      "directory /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_datasets/geometry already exists.\n",
       "write vrt file for geometry dataset\n",
       "number of SLCs discovered:  22\n",
-      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/slcs\" already exists.\n",
+      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_datasets/slcs\" already exists.\n",
       "write vrt file for each SLC ...\n",
-      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/coreg_stack already exists\n",
+      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_datasets/coreg_stack already exists\n",
       "write vrt file for stack directory\n",
-      "directory /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/geometry already exists.\n",
+      "directory /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_datasets/geometry already exists.\n",
       "write vrt file for geometry dataset\n"
      ]
     }
