--- a/FordDryLake_InSAR4SM_results.ipynb
+++ b/FordDryLake_InSAR4SM_results.ipynb
@@ -162,11 +162,10 @@
     "    n = predictions.shape[0]\n",
     "    rmse = np.linalg.norm(predictions - targets) / np.sqrt(n)\n",
     "    r, p = scipy.stats.pearsonr(predictions, targets)\n",
-    "    bias = (targets-predictions).mean()\n",
     "\n",
     "    #comparison_df[['sm_plot', 'SM0', 'SM_index', 'insar4sm']].plot(figsize=(13,18), style='.-')\n",
     "    comparison_df[['sm_plot', 'SM_index']].plot(figsize=(10,8), style='.-')\n",
-    "    plt.title('RMSE: {} m3/m3 \\n R : {} \\n bias : {}'.format(round(rmse,2), round(r,2), round(bias,2)))\n",
+    "    plt.title('RMSE: {} m3/m3 \\n R : {}'.format(round(rmse,2), round(r,2)))\n",
     "\n",
     "    plt.savefig('/RSL02/SM_NA/revisions_r1_figures/{}.svg'.format(projectname))\n",
     "    plt.close()\n"
@@ -253,7 +252,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flompy_dev",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -267,12 +266,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "609eec5239ba7e05cc8fa7e865781179e721b74b7309e06e34f60eb7c382fa86"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
