--- a/InSAR4SM_temporal_decorrelation_modelling.ipynb
+++ b/InSAR4SM_temporal_decorrelation_modelling.ipynb
@@ -167,6 +167,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data folder can be downloaded from [github repo](https://github.com/kleok/INSAR4SM/tree/Revisions_r1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
