--- a/Spatial_resolution_experiment.ipynb
+++ b/Spatial_resolution_experiment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepare folder structure"
+    "#### In case you want to reproduce the results of this notebook please download the folder SM_NA from http://147.102.106.42:5000/fsdownload/gxzvLswJM/public and replace the paths in the following cells.\n",
+    "\n",
+    "For example '/RSL02/SM_NA/Topstack_processing_orbit_100/' should become 'path_to_your_SM_NA/Topstack_processing_orbit_100'"
    ]
   },
   {
@@ -402,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flompy_dev",
+   "display_name": "insar4sm",
    "language": "python",
    "name": "python3"
   },
@@ -421,7 +423,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "609eec5239ba7e05cc8fa7e865781179e721b74b7309e06e34f60eb7c382fa86"
+    "hash": "b9bf684aed59e58c11292718d6d3574bfbd24b3a5f3932f2293d1c2e0cadd0ae"
    }
   }
  },
