adding link for data access

--- a/Burgi_SSM_implementation.ipynb
+++ b/Burgi_SSM_implementation.ipynb
@@ -58,12 +58,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data folder can be downloaded from [github repo](https://github.com/kleok/INSAR4SM/tree/Revisions_r1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coh_filename = '/RSL02/upload_github/InSAR4SM/Data/INSAR4SM_r1_orb{}_125m_FordDryLake_sm_point_ts.obj'.format(orbit_num)\n",
+    "coh_filename = 'Data/INSAR4SM_r1_orb{}_125m_FordDryLake_sm_point_ts.obj'.format(orbit_num)\n",
     "with open(coh_filename, 'rb') as inp:\n",
     "    FordDryLake_100 = pickle.load(inp)\n",
     "\n",
@@ -765,13 +773,6 @@
     "sm_initial_df[['sm_plot', 'burgi2021','insar4sm']].plot(figsize=(10,8), style='.-')\n",
     "plt.title('RMSE: {} m3/m3 \\n R : {}'.format(round(rmse,2), round(r,2)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
