--- a/FordDryLake_InSAR4SM_results.ipynb
+++ b/FordDryLake_InSAR4SM_results.ipynb
@@ -54,6 +54,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In case you want to reproduce the results of this notebook please download the folder SM_NA from http://147.102.106.42:5000/fsdownload/gxzvLswJM/public and replace the paths in the following cells.\n",
+    "\n",
+    "For example '/RSL02/SM_NA/Topstack_processing_orbit_100/' should become 'path_to_your_SM_NA/Topstack_processing_orbit_100'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
