--- a/InSAR4SM_arabian_peninsula_burgi_AOI.ipynb
+++ b/InSAR4SM_arabian_peninsula_burgi_AOI.ipynb
@@ -64,6 +64,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### In case you want to reproduce the results of this notebook please download the folder SM_Arabia from http://147.102.106.42:5000/fsdownload/gxzvLswJM/public and replace the paths in the following cells.\n",
+    "\n",
+    "For example '/RSL02/SM_Arabia/Topstack_processing/' should become 'path_to_your_SM_Arabia/Topstack_processing'"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Input arguments for Arabia case study"
    ]
   },
