--- a/FordDryLake_InSAR4SM_noDS_results.ipynb
+++ b/FordDryLake_InSAR4SM_noDS_results.ipynb
@@ -54,6 +54,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In case you want to reproduce the results of this notebook please download the folder SM_NA from http://147.102.106.42:5000/fsdownload/gxzvLswJM/public and replace the paths in the following cells.\n",
+    "\n",
+    "For example '/RSL02/SM_NA/Topstack_processing_orbit_100/' should become 'path_to_your_SM_NA/Topstack_processing_orbit_100'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -219,43 +229,11 @@
     "    orbit_num,  orbit_time_UTC =  orbit_comb\n",
     "    run_INSAR4SM(orbit_num, orbit_time_UTC, grid_size, ISMN_station)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# ISMN_data = '/RSL02/upload_github/InSAR4SM/testing/FordDryLake_data.pkl'\n",
-    "# with open(ISMN_data, 'rb') as inp:\n",
-    "#     FordDryLake_data = pickle.load(inp)\n",
-    "\n",
-    "# dict_clc_data = sm_point_ts.__dict__\n",
-    "\n",
-    "# FordDryLake_SM_data = SM_point(insar4sm_stack = FordDryLake_data, sm_ind=0)\n",
-    "# FordDryLake_SM_data.get_DS_info(FordDryLake_data)\n",
-    "# FordDryLake_SM_data.calc_covar_matrix()\n",
-    "# FordDryLake_SM_data.get_DS_geometry(FordDryLake_data)\n",
-    "# FordDryLake_SM_data.calc_driest_date()\n",
-    "# FordDryLake_SM_data.calc_sm_sorting()\n",
-    "# FordDryLake_SM_data.calc_sm_coherence()\n",
-    "# FordDryLake_SM_data.calc_sm_index()\n",
-    "# FordDryLake_SM_data.inversion()\n",
-    "# dict_data = FordDryLake_SM_data.__dict__\n",
-    "\n",
-    "# plt.plot(dict_clc_data['amp_DS'][0,:])\n",
-    "# plt.plot(dict_data['amp_DS'][0,:])\n",
-    "\n",
-    "# plt.plot(dict_clc_data['sm_inverted'])\n",
-    "# plt.plot(dict_data['sm_inverted'])\n",
-    "# plt.plot()"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flompy_dev",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -269,12 +247,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "609eec5239ba7e05cc8fa7e865781179e721b74b7309e06e34f60eb7c382fa86"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
