--- a/Burgi_SSM_implementation.ipynb
+++ b/Burgi_SSM_implementation.ipynb
@@ -9,8 +9,7 @@
     "\n",
     "Bürgi, P. M., & Lohman, R. B. (2021). High‐Resolution Soil Moisture Evolution in Hyper‐Arid Regions: A Comparison of InSAR, SAR, Microwave, Optical, and Data Assimilation Systems in the Southern Arabian Peninsula. Journal of Geophysical Research: Earth Surface, 126(12), e2021JF006158.\n",
     "\n",
-    "Author: Kleanthis Karamvasis  \n",
-    "Creation Date: 25/02/2023\n"
+    "Author: Kleanthis Karamvasis \n"
    ]
   },
   {
