--- a/FordDryLake_InSAR4SM_noDS_results.ipynb
+++ b/FordDryLake_InSAR4SM_noDS_results.ipynb
@@ -72,7 +72,7 @@
     "def run_INSAR4SM(orbit_num, orbit_time_UTC, grid_size, ISMN_station):\n",
     "    ###############################################################################\n",
     "    # the name of your experiment\n",
-    "    projectname = 'INSAR4SM_r1_orb{}_{}m_{}_noDS'.format(orbit_num, grid_size, ISMN_station)\n",
+    "    projectname = 'INSAR4SM_r2_v2_orb{}_{}m_{}_noDS'.format(orbit_num, grid_size, ISMN_station)\n",
     "\n",
     "    # the directory of the topstack processing\n",
     "    topstackDir = '/RSL02/SM_NA/Topstack_processing_orbit_{}'.format(orbit_num)\n",
@@ -177,16 +177,16 @@
     "    bias = (targets-predictions).mean()\n",
     "\n",
     "    #comparison_df[['sm_plot', 'SM0', 'SM_index', 'insar4sm']].plot(figsize=(13,18), style='.-')\n",
-    "    comparison_df[['sm_plot', 'SM_index']].plot(figsize=(10,8), style='.-')\n",
+    "    comparison_df[['sm_plot', 'SM_index']].plot(figsize=(10,8), style='.-', ylim=(0,20))\n",
     "    plt.title('RMSE: {} m3/m3 \\n R : {} \\n bias : {}'.format(round(rmse,2), round(r,2), round(bias,2)))\n",
     "\n",
-    "    plt.savefig('/RSL02/SM_NA/revisions_r1_figures/{}.svg'.format(projectname))\n",
+    "    plt.savefig('/RSL02/SM_NA/revisions_r2_figures/{}.svg'.format(projectname))\n",
     "    plt.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,25 +194,25 @@
      "output_type": "stream",
      "text": [
       "number of SLCs discovered:  23\n",
-      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_datasets/slcs\" already exists.\n",
+      "directory \"/RSL02/SM_NA/INSAR4SM_r2_v2_orb173_125m_FordDryLake_noDS/INSAR4SM_r2_v2_orb173_125m_FordDryLake_noDS/INSAR4SM_datasets/slcs\" already exists.\n",
       "write vrt file for each SLC ...\n",
-      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_datasets/coreg_stack already exists\n",
+      "stack directory: /RSL02/SM_NA/INSAR4SM_r2_v2_orb173_125m_FordDryLake_noDS/INSAR4SM_r2_v2_orb173_125m_FordDryLake_noDS/INSAR4SM_datasets/coreg_stack already exists\n",
       "write vrt file for stack directory\n",
-      "directory /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_r1_orb173_125m_FordDryLake_noDS/INSAR4SM_datasets/geometry already exists.\n",
+      "directory /RSL02/SM_NA/INSAR4SM_r2_v2_orb173_125m_FordDryLake_noDS/INSAR4SM_r2_v2_orb173_125m_FordDryLake_noDS/INSAR4SM_datasets/geometry already exists.\n",
       "write vrt file for geometry dataset\n",
       "number of SLCs discovered:  22\n",
-      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_datasets/slcs\" already exists.\n",
+      "creating directory: /RSL02/SM_NA/INSAR4SM_r2_v2_orb100_125m_FordDryLake_noDS/INSAR4SM_r2_v2_orb100_125m_FordDryLake_noDS/INSAR4SM_datasets/slcs\n",
       "write vrt file for each SLC ...\n",
-      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_datasets/coreg_stack already exists\n",
+      "creating stack directory: /RSL02/SM_NA/INSAR4SM_r2_v2_orb100_125m_FordDryLake_noDS/INSAR4SM_r2_v2_orb100_125m_FordDryLake_noDS/INSAR4SM_datasets/coreg_stack\n",
       "write vrt file for stack directory\n",
-      "directory /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_r1_orb100_125m_FordDryLake_noDS/INSAR4SM_datasets/geometry already exists.\n",
+      "creating geometry directory: /RSL02/SM_NA/INSAR4SM_r2_v2_orb100_125m_FordDryLake_noDS/INSAR4SM_r2_v2_orb100_125m_FordDryLake_noDS/INSAR4SM_datasets/geometry\n",
       "write vrt file for geometry dataset\n",
       "number of SLCs discovered:  22\n",
-      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_datasets/slcs\" already exists.\n",
+      "creating directory: /RSL02/SM_NA/INSAR4SM_r2_v2_orb166_125m_FordDryLake_noDS/INSAR4SM_r2_v2_orb166_125m_FordDryLake_noDS/INSAR4SM_datasets/slcs\n",
       "write vrt file for each SLC ...\n",
-      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_datasets/coreg_stack already exists\n",
+      "creating stack directory: /RSL02/SM_NA/INSAR4SM_r2_v2_orb166_125m_FordDryLake_noDS/INSAR4SM_r2_v2_orb166_125m_FordDryLake_noDS/INSAR4SM_datasets/coreg_stack\n",
       "write vrt file for stack directory\n",
-      "directory /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_r1_orb166_125m_FordDryLake_noDS/INSAR4SM_datasets/geometry already exists.\n",
+      "creating geometry directory: /RSL02/SM_NA/INSAR4SM_r2_v2_orb166_125m_FordDryLake_noDS/INSAR4SM_r2_v2_orb166_125m_FordDryLake_noDS/INSAR4SM_datasets/geometry\n",
       "write vrt file for geometry dataset\n"
      ]
     }
@@ -229,6 +229,13 @@
     "    orbit_num,  orbit_time_UTC =  orbit_comb\n",
     "    run_INSAR4SM(orbit_num, orbit_time_UTC, grid_size, ISMN_station)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -247,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
