--- a/FordDryLake_InSAR4SM_results.ipynb
+++ b/FordDryLake_InSAR4SM_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_INSAR4SM(orbit_num, orbit_time_UTC, grid_size, ISMN_station):\n",
     "    ###############################################################################\n",
     "    # the name of your experiment\n",
-    "    projectname = 'INSAR4SM_r1_orb{}_{}m_{}'.format(orbit_num, grid_size, ISMN_station)\n",
+    "    projectname = 'INSAR4SM_r2_v2_test20_orb{}_{}m_{}'.format(orbit_num, grid_size, ISMN_station)\n",
     "\n",
     "    # the directory of the topstack processing\n",
     "    topstackDir = '/RSL02/SM_NA/Topstack_processing_orbit_{}'.format(orbit_num)\n",
@@ -182,49 +182,21 @@
     "    r, p = scipy.stats.pearsonr(predictions, targets)\n",
     "\n",
     "    #comparison_df[['sm_plot', 'SM0', 'SM_index', 'insar4sm']].plot(figsize=(13,18), style='.-')\n",
-    "    comparison_df[['sm_plot', 'SM_index']].plot(figsize=(10,8), style='.-')\n",
+    "    comparison_df[['sm_plot', 'insar4sm']].plot(figsize=(10,8), style='.-', ylim=(0,20))\n",
     "    plt.title('RMSE: {} m3/m3 \\n R : {}'.format(round(rmse,2), round(r,2)))\n",
     "\n",
-    "    plt.savefig('/RSL02/SM_NA/revisions_r1_figures/{}.svg'.format(projectname))\n",
+    "    plt.savefig('/RSL02/SM_NA/revisions_r2_figures/{}.svg'.format(projectname))\n",
     "    plt.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of SLCs discovered:  23\n",
-      "directory \"/RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/slcs\" already exists.\n",
-      "write vrt file for each SLC ...\n",
-      "stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/coreg_stack already exists\n",
-      "write vrt file for stack directory\n",
-      "directory /RSL02/SM_NA/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_r1_orb173_125m_FordDryLake/INSAR4SM_datasets/geometry already exists.\n",
-      "write vrt file for geometry dataset\n",
-      "number of SLCs discovered:  22\n",
-      "creating directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/slcs\n",
-      "write vrt file for each SLC ...\n",
-      "creating stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/coreg_stack\n",
-      "write vrt file for stack directory\n",
-      "creating geometry directory: /RSL02/SM_NA/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_r1_orb100_125m_FordDryLake/INSAR4SM_datasets/geometry\n",
-      "write vrt file for geometry dataset\n",
-      "number of SLCs discovered:  22\n",
-      "creating directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/slcs\n",
-      "write vrt file for each SLC ...\n",
-      "creating stack directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/coreg_stack\n",
-      "write vrt file for stack directory\n",
-      "creating geometry directory: /RSL02/SM_NA/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_r1_orb166_125m_FordDryLake/INSAR4SM_datasets/geometry\n",
-      "write vrt file for geometry dataset\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ISMN_station = 'FordDryLake'\n",
-    "grid_size = 125 # radius \n",
+    "grid_size = 150 # radius \n",
     "\n",
     "orbit_combs = [['173','14:00:00'],\n",
     "               ['100','14:00:00'],\n",
